Web Locks API: Abort after lock is granted should not cause rejection

An abort signal before a lock is granted causes the promise returned
by navigator.locks.request() to reject. But if the signal comes in
after the lock is granted, the signal should not change the promise
behavior (it resolves with the result of the callback function).

The existing test was insufficient to catch a bug here; fix the bug
(no-op the abort if it comes in too late) and improve test coverage.

Bug: 828990
Change-Id: I1b056a05ba49e284fb8eea76bd9652a904232c60
Reviewed-on: https://chromium-review.googlesource.com/999828
Reviewed-by: Victor Costan <pwnall@chromium.org>
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550755}
Former-commit-id: 6b57aa5ab06b239c1b074b7adbaa017e91ba82e2